-- WARNING: This schema is for context only and is not meant to be run.
-- Table order and constraints may not be valid for execution.

CREATE TABLE menuca_v3.cities (
  id integer GENERATED ALWAYS AS IDENTITY NOT NULL,
  name character varying NOT NULL,
  display_name character varying,
  province_id smallint,
  lat numeric,
  lng numeric,
  timezone character varying,
  CONSTRAINT cities_pkey PRIMARY KEY (id),
  CONSTRAINT cities_province_id_fkey FOREIGN KEY (province_id) REFERENCES menuca_v3.provinces(id)
);
CREATE TABLE menuca_v3.combo_groups (
  id integer NOT NULL,
  restaurant_id bigint NOT NULL,
  name character varying NOT NULL,
  language character varying DEFAULT 'en'::character varying,
  display_order integer DEFAULT 0,
  config jsonb,
  source_system character varying,
  source_id integer,
  created_at timestamp with time zone DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT combo_groups_pkey PRIMARY KEY (id),
  CONSTRAINT combo_groups_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.combo_items (
  id integer NOT NULL,
  combo_group_id integer NOT NULL,
  dish_id integer,
  item_type character varying,
  display_order integer DEFAULT 0,
  source_system character varying,
  source_id integer,
  created_at timestamp with time zone DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT combo_items_pkey PRIMARY KEY (id),
  CONSTRAINT combo_items_combo_group_id_fkey FOREIGN KEY (combo_group_id) REFERENCES menuca_v3.combo_groups(id),
  CONSTRAINT combo_items_dish_id_fkey FOREIGN KEY (dish_id) REFERENCES menuca_v3.dishes(id)
);
CREATE TABLE menuca_v3.courses (
  id integer NOT NULL,
  restaurant_id bigint NOT NULL,
  name character varying NOT NULL,
  description text,
  display_order integer DEFAULT 0,
  is_global boolean DEFAULT false,
  language character varying DEFAULT 'en'::character varying,
  availability_schedule jsonb,
  created_at timestamp with time zone DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT courses_pkey PRIMARY KEY (id),
  CONSTRAINT courses_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.dish_customizations (
  id integer NOT NULL,
  dish_id integer NOT NULL,
  ingredient_group_id integer,
  customization_type character varying,
  is_required boolean DEFAULT false,
  min_selections integer DEFAULT 0,
  max_selections integer,
  display_order integer DEFAULT 0,
  source_system character varying,
  source_id integer,
  created_at timestamp with time zone DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT dish_customizations_pkey PRIMARY KEY (id),
  CONSTRAINT dish_customizations_dish_id_fkey FOREIGN KEY (dish_id) REFERENCES menuca_v3.dishes(id),
  CONSTRAINT dish_customizations_ingredient_group_id_fkey FOREIGN KEY (ingredient_group_id) REFERENCES menuca_v3.ingredient_groups(id)
);
CREATE TABLE menuca_v3.dish_modifiers (
  dish_id integer NOT NULL,
  ingredient_id integer NOT NULL,
  ingredient_group_id integer,
  prices jsonb,
  created_at timestamp with time zone DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT dish_modifiers_pkey PRIMARY KEY (dish_id, ingredient_id),
  CONSTRAINT dish_modifiers_dish_id_fkey FOREIGN KEY (dish_id) REFERENCES menuca_v3.dishes(id),
  CONSTRAINT dish_modifiers_ingredient_id_fkey FOREIGN KEY (ingredient_id) REFERENCES menuca_v3.ingredients(id),
  CONSTRAINT dish_modifiers_ingredient_group_id_fkey FOREIGN KEY (ingredient_group_id) REFERENCES menuca_v3.ingredient_groups(id)
);
CREATE TABLE menuca_v3.dishes (
  id integer NOT NULL,
  restaurant_id bigint NOT NULL,
  course_id integer,
  name character varying NOT NULL,
  description text,
  prices jsonb NOT NULL,
  language character varying DEFAULT 'en'::character varying,
  display_order integer DEFAULT 0,
  is_available boolean DEFAULT true,
  availability_schedule jsonb,
  image_url character varying,
  source_system character varying,
  source_id integer,
  created_at timestamp with time zone DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT dishes_pkey PRIMARY KEY (id),
  CONSTRAINT dishes_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id),
  CONSTRAINT dishes_course_id_fkey FOREIGN KEY (course_id) REFERENCES menuca_v3.courses(id)
);
CREATE TABLE menuca_v3.ingredient_groups (
  id integer NOT NULL,
  restaurant_id bigint NOT NULL,
  name character varying NOT NULL,
  group_type character varying,
  is_global boolean DEFAULT false,
  language character varying DEFAULT 'en'::character varying,
  display_order integer DEFAULT 0,
  source_system character varying,
  source_id integer,
  created_at timestamp with time zone DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT ingredient_groups_pkey PRIMARY KEY (id),
  CONSTRAINT ingredient_groups_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.ingredients (
  id integer NOT NULL,
  restaurant_id bigint NOT NULL,
  ingredient_group_id integer,
  name character varying NOT NULL,
  price character varying,
  language character varying DEFAULT 'en'::character varying,
  type character varying,
  display_order integer DEFAULT 0,
  available_for character varying,
  source_system character varying,
  source_id integer,
  created_at timestamp with time zone DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT ingredients_pkey PRIMARY KEY (id),
  CONSTRAINT ingredients_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id),
  CONSTRAINT ingredients_ingredient_group_id_fkey FOREIGN KEY (ingredient_group_id) REFERENCES menuca_v3.ingredient_groups(id)
);
CREATE TABLE menuca_v3.provinces (
  id smallint NOT NULL,
  name character varying NOT NULL,
  nom_francaise character varying,
  short_name character NOT NULL,
  CONSTRAINT provinces_pkey PRIMARY KEY (id)
);
CREATE TABLE menuca_v3.restaurant_admin_users (
  id bigint NOT NULL DEFAULT nextval('menuca_v3.restaurant_admin_users_id_seq'::regclass),
  uuid uuid NOT NULL DEFAULT uuid_generate_v4() UNIQUE,
  restaurant_id bigint NOT NULL,
  user_type character varying DEFAULT 'r'::character varying,
  first_name character varying,
  last_name character varying,
  email character varying NOT NULL,
  password_hash character varying,
  last_login timestamp with time zone,
  login_count integer DEFAULT 0,
  is_active boolean NOT NULL DEFAULT true,
  send_statement boolean DEFAULT false,
  created_at timestamp with time zone NOT NULL DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT restaurant_admin_users_pkey PRIMARY KEY (id),
  CONSTRAINT restaurant_admin_users_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.restaurant_contacts (
  id bigint NOT NULL DEFAULT nextval('menuca_v3.restaurant_contacts_id_seq'::regclass),
  uuid uuid NOT NULL DEFAULT uuid_generate_v4() UNIQUE,
  restaurant_id bigint NOT NULL,
  title character varying,
  first_name character varying,
  last_name character varying,
  email character varying,
  phone character varying,
  receives_orders boolean DEFAULT false,
  receives_statements boolean DEFAULT false,
  receives_marketing boolean DEFAULT false,
  preferred_language character DEFAULT 'en'::bpchar,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamp with time zone NOT NULL DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT restaurant_contacts_pkey PRIMARY KEY (id),
  CONSTRAINT restaurant_contacts_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.restaurant_domains (
  id bigint NOT NULL DEFAULT nextval('menuca_v3.restaurant_domains_id_seq'::regclass),
  uuid uuid NOT NULL DEFAULT uuid_generate_v4(),
  restaurant_id bigint NOT NULL,
  domain character varying NOT NULL,
  domain_type text,
  is_enabled boolean NOT NULL DEFAULT true,
  added_by integer,
  created_at timestamp with time zone NOT NULL DEFAULT now(),
  disabled_by integer,
  disabled_at timestamp with time zone,
  updated_at timestamp with time zone,
  CONSTRAINT restaurant_domains_pkey PRIMARY KEY (id),
  CONSTRAINT restaurant_domains_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.restaurant_id_mapping (
  old_restaurant_id integer,
  new_restaurant_id bigint,
  restaurant_name character varying,
  status USER-DEFINED
);
CREATE TABLE menuca_v3.restaurant_locations (
  id bigint NOT NULL DEFAULT nextval('menuca_v3.restaurant_locations_id_seq'::regclass),
  uuid uuid NOT NULL DEFAULT uuid_generate_v4() UNIQUE,
  restaurant_id bigint NOT NULL,
  is_primary boolean NOT NULL DEFAULT true,
  street_address character varying,
  city_id integer,
  province_id integer,
  postal_code character varying,
  latitude numeric,
  longitude numeric,
  phone character varying,
  email character varying,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamp with time zone NOT NULL DEFAULT now(),
  updated_at timestamp with time zone,
  CONSTRAINT restaurant_locations_pkey PRIMARY KEY (id),
  CONSTRAINT restaurant_locations_city_id_fkey FOREIGN KEY (city_id) REFERENCES menuca_v3.cities(id),
  CONSTRAINT restaurant_locations_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.restaurant_schedules (
  id bigint NOT NULL DEFAULT nextval('menuca_v3.restaurant_schedules_id_seq'::regclass),
  uuid uuid NOT NULL DEFAULT uuid_generate_v4() UNIQUE,
  restaurant_id bigint NOT NULL,
  type USER-DEFINED NOT NULL,
  day_start smallint NOT NULL CHECK (day_start >= 1 AND day_start <= 7),
  time_start time without time zone NOT NULL,
  time_stop time without time zone NOT NULL,
  is_enabled boolean NOT NULL DEFAULT true,
  created_at timestamp with time zone NOT NULL DEFAULT now(),
  updated_at timestamp with time zone,
  day_stop smallint NOT NULL CHECK (day_stop >= 1 AND day_stop <= 7),
  notes text,
  CONSTRAINT restaurant_schedules_pkey PRIMARY KEY (id),
  CONSTRAINT restaurant_schedules_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.restaurant_service_configs (
  id bigint GENERATED ALWAYS AS IDENTITY NOT NULL,
  uuid uuid NOT NULL DEFAULT uuid_generate_v4() UNIQUE,
  restaurant_id bigint NOT NULL UNIQUE,
  delivery_enabled boolean NOT NULL DEFAULT false,
  delivery_time_minutes integer CHECK (delivery_time_minutes IS NULL OR delivery_time_minutes > 0),
  delivery_min_order numeric,
  delivery_max_distance_km numeric,
  takeout_enabled boolean NOT NULL DEFAULT false,
  takeout_time_minutes integer CHECK (takeout_time_minutes IS NULL OR takeout_time_minutes > 0),
  takeout_discount_enabled boolean DEFAULT false,
  takeout_discount_type character varying CHECK (takeout_discount_type IS NULL OR (takeout_discount_type::text = ANY (ARRAY['percentage'::character varying, 'fixed'::character varying]::text[]))),
  takeout_discount_value numeric,
  allow_preorders boolean DEFAULT false,
  preorder_time_frame_hours integer,
  is_bilingual boolean DEFAULT false,
  default_language character varying DEFAULT 'en'::character varying CHECK (default_language::text = ANY (ARRAY['en'::character varying, 'fr'::character varying, 'es'::character varying]::text[])),
  accepts_tips boolean DEFAULT true,
  requires_phone boolean DEFAULT true,
  created_at timestamp with time zone NOT NULL DEFAULT now(),
  created_by integer,
  updated_at timestamp with time zone,
  updated_by integer,
  notes text,
  CONSTRAINT restaurant_service_configs_pkey PRIMARY KEY (id),
  CONSTRAINT restaurant_service_configs_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.restaurant_special_schedules (
  id bigint GENERATED ALWAYS AS IDENTITY NOT NULL,
  uuid uuid NOT NULL DEFAULT uuid_generate_v4() UNIQUE,
  restaurant_id bigint NOT NULL,
  schedule_type character varying NOT NULL CHECK (schedule_type::text = ANY (ARRAY['closed'::character varying, 'open'::character varying, 'modified'::character varying]::text[])),
  date_start date NOT NULL,
  date_stop date NOT NULL,
  time_start time without time zone,
  time_stop time without time zone,
  reason character varying,
  apply_to character varying CHECK (apply_to::text = ANY (ARRAY['delivery'::character varying, 'takeout'::character varying, 'both'::character varying]::text[])),
  notes text,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamp with time zone NOT NULL DEFAULT now(),
  created_by integer,
  updated_at timestamp with time zone,
  updated_by integer,
  CONSTRAINT restaurant_special_schedules_pkey PRIMARY KEY (id),
  CONSTRAINT restaurant_special_schedules_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.restaurant_time_periods (
  id bigint GENERATED ALWAYS AS IDENTITY NOT NULL,
  uuid uuid NOT NULL DEFAULT uuid_generate_v4() UNIQUE,
  restaurant_id bigint NOT NULL,
  name character varying NOT NULL,
  time_start time without time zone NOT NULL,
  time_stop time without time zone NOT NULL,
  is_enabled boolean NOT NULL DEFAULT true,
  display_order integer DEFAULT 0,
  created_at timestamp with time zone NOT NULL DEFAULT now(),
  created_by integer,
  updated_at timestamp with time zone,
  updated_by integer,
  disabled_at timestamp with time zone,
  disabled_by integer,
  notes text,
  CONSTRAINT restaurant_time_periods_pkey PRIMARY KEY (id),
  CONSTRAINT restaurant_time_periods_restaurant_id_fkey FOREIGN KEY (restaurant_id) REFERENCES menuca_v3.restaurants(id)
);
CREATE TABLE menuca_v3.restaurants (
  id bigint NOT NULL DEFAULT nextval('menuca_v3.restaurants_id_seq'::regclass),
  uuid uuid NOT NULL DEFAULT uuid_generate_v4() UNIQUE,
  legacy_v1_id integer,
  legacy_v2_id integer,
  name character varying NOT NULL,
  status USER-DEFINED NOT NULL DEFAULT 'pending'::restaurant_status,
  activated_at timestamp with time zone,
  suspended_at timestamp with time zone,
  closed_at timestamp with time zone,
  created_at timestamp with time zone NOT NULL DEFAULT now(),
  created_by integer,
  updated_at timestamp with time zone,
  updated_by integer,
  CONSTRAINT restaurants_pkey PRIMARY KEY (id)
);